# upac-lib

./: .gitignore  LICENSE  Makefile  PKGBUILD  README.md  config.toml.example  flake.nix
.github/workflows/: release.yml
pkg-specs/: config.toml  test-config.toml
pkg-specs/arch/: PKGBUILD
pkg-specs/deb/: changelog  control  install
pkg-specs/rpm/: upac.spec
scripts/: end-temp.sh  start-temp.sh  temp-test.sh
upac-alpm/: build.zig  build.zig.zon
upac-alpm-backend/: build.zig  build.zig.zon
upac-alpm-backend/src/: backend.zig  machine.zig  states.zig  types.zig
upac-alpm/src/: backend.zig  states.zig
upac-cli/: Cargo.toml
upac-cli/.cargo/: config.toml
upac-cli/src/: backends.rs  config.rs  ffi.rs  main.rs  types.rs  upac.rs  utils.rs
upac-cli/src/commands/: commit.rs  diff.rs  init.rs  install.rs  list.rs  remove.rs  rollback.rs
upac-cli/src/commands/diff/: mod.rs  states.rs
upac-cli/src/commands/init/: mod.rs  states.rs
upac-cli/src/commands/install/: mod.rs  states.rs
upac-cli/src/commands/list/: mod.rs  states.rs
upac-cli/src/commands/remove/: mod.rs  states.rs
upac-cli/src/commands/rollback/: mod.rs  states.rs
upac-deb/: build.zig  build.zig.zon
upac-deb-backend/: build.zig  build.zig.zon
upac-deb-backend/src/: backend.zig
upac-deb/src/: backend.zig  states.zig
upac-lib/: build.zig  build.zig.zon
upac-lib/src/: export.zig  init.zig  lib.zig  test.zig  types.zig
upac-lib/src/commands/: init.zig
upac-lib/src/data/: data.zig  database.zig  index.zig
upac-lib/src/database/: database.zig  machine.zig  states.zig  types.zig
upac-lib/src/diff/: diff.zig
upac-lib/src/ffi/: alloc.zig  ctypes.zig  errors.zig  export.zig  types.zig
upac-lib/src/file/: file.zig  (+1 more)
upac-rpm/: build.zig  build.zig.zon
upac-rpm-backend/: build.zig
upac-rpm-backend/src/: backend.zig  parser.zig  states.zig
upac-rpm/src/: backend.zig  parser.zig  states.zig
(+50 files in other folders)
