[package]
name = "upac"
version = "0.1.1"
edition = "2021"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
indicatif  = { version = "0.17" }
libloading = { version = "0.8" }
toml       = { version = "0.8" }
colored    = { version = "2" }
anyhow     = { version = "1" }
chrono = { version = "0.4" }
