[package]
name = "upac"
version = "0.1.4"
edition = "2021"
authors = ["justpav05 <aksenovpaveldmitrievich@gmail.com>"]
description = "Package manager for installing any type of package in Linux, as well as registering binary file rollbacks based on OSTree, written in Rust and Zig"
repository = "https://github.com/justpav05/upac"
license = "LGPL-3.0-or-later"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
indicatif  = { version = "0.18.4" }
libloading = { version = "0.9" }
toml       = { version = "1.1.2+spec-1.1.0" }
colored    = { version = "3.1.1" }
anyhow     = { version = "1.0.102" }
chrono     = { version = "0.4" }
sha2       = { version = "0.11" }
hex        = { version = "0.4" }
smart-default = { version = "0.7.1" }
ctrlc = { version = "3.4" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
